# Remhos

./: .gitignore  .travis.yml  CHANGELOG  CMakeLists.txt  LICENSE  README.md  balls-and-jacks.lua  debug.hpp  dykstra.hpp  errors.txt  legendre.hpp  makefile  polyclip.cpp  polyclip.hpp  remap.cpp  remap.hpp  remhos.cpp  remhos.hpp  remhos_HiOp.cpp  remhos_HiOp.hpp  remhos_adv.cpp  remhos_adv.hpp  remhos_amr.cpp  remhos_amr.hpp  remhos_bregman.cpp  remhos_bregman.hpp  remhos_fct.cpp  remhos_fct.hpp  remhos_gslib.cpp  remhos_gslib.hpp  remhos_ho.cpp  remhos_ho.hpp  remhos_ibc.cpp  remhos_ibc.hpp  remhos_lo.cpp  remhos_lo.hpp  remhos_lvpp.cpp  remhos_lvpp.hpp  remhos_main.cpp  remhos_mono.cpp  (+16 more)
.github/workflows/: build-and-test.yml
autotest/: test.sh  test_cuda.sh  test_remap.sh
data/: unit-square.mesh
